--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
     paths:
-      - android
-      - ios
+      - android/**
+      - ios/**
 
 jobs:
   build-and-release-android:
