--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -17,6 +17,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ inputs.branch || github.ref }}
+          fetch-depth: 0
+
+      - name: Verify version detection
+        run: |
+          echo "Verifying git tag detection..."
+          git describe --tags --abbrev=0
+          echo "Expected version: ${{ github.event.inputs.version }}"
 
       - name: Build Android SDK
         working-directory: android
