--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -39,3 +39,19 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew :lyrazohoandroid:publishReleasePublicationToGitHubPackagesRepository
+
+  build-and-release-ios:
+    name: Build and Release iOS SDK
+    runs-on: macos-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.branch || github.ref }}
+          fetch-depth: 0
+
+      - name: Verify version detection
+        run: |
+          echo "Verifying git tag detection..."
+          git describe --tags --abbrev=0
+          echo "Expected version: ${{ github.event.inputs.version }}"
